erDiagram
    %% MODULE: USER SPINE
    STAFF_ROLES ||--o{ USERS : "phân quyền"
    USERS ||--o| WALLET : "sở hữu"
    USERS ||--o{ LOAN_TICKETS : "tạo"
    LOAN_TICKETS ||--|{ LOAN_DETAILS : "chứa"
    LOAN_DETAILS ||--o{ BOOK_COPIES : "mượn"
    LOAN_DETAILS ||--o{ TRANSACTIONS : "phạt"
    USERS ||--o{ TRANSACTIONS : "trả tiền"

    
    %% MODULE: ADD-ONS (V41 EXTENSION)
    USERS ||--o{ BOOK_PROPOSALS : "đề xuất"
    USERS ||--o{ COMPLAINTS : "khiếu nại"
    USERS ||--o{ REVIEWS : "đánh giá"
    USERS ||--o{ WISHLIST : "quan tâm"
    BOOKS ||--o{ REVIEWS : "có đánh giá"
    BOOKS ||--o{ WISHLIST : "nằm trong"
    SUPPLIERS ||--o{ GOODS_RECEIPTS : "cung cấp"
    USERS ||--o{ GOODS_RECEIPTS : "nhập kho"
    GOODS_RECEIPTS ||--|{ RECEIPT_DETAILS : "chi tiết"
    BOOKS ||--o{ RECEIPT_DETAILS : "được nhập"

    %% MODULE: CATALOGING SPINE
    BOOK_COPIES }o--|| BOOKS : "là bản sao của"
    BOOKS }o--|| CATEGORIES : "thuộc"
    BOOKS }o--|| PUBLISHERS : "được xuất bản bởi"
    BOOKS ||--o{ BOOK_AUTHORS : "viết bởi"
    AUTHORS ||--o{ BOOK_AUTHORS : "viết"

    %% MODULE: DIGITAL SPINE
    BOOKS ||--o| DIGITAL_DOCUMENTS : "có bản số"
    DIGITAL_DOCUMENTS ||--o{ DIGITAL_USAGE_LOGS : "có lượt truy cập"
    USERS ||--o{ DIGITAL_USAGE_LOGS : "truy cập"

    %% MODULE: ROOMS SPINE
    USERS ||--o{ ROOM_BOOKINGS : "đặt phòng"
    ROOM_BOOKINGS }o--|| ROOMS : "giữ phòng"
    ROOM_BOOKINGS ||--|{ ROOM_BOOKING_MEMBERS : "gồm thành viên"

    %% MODULE: NOTIFS & QUEUE
    USERS ||--o{ WAITLIST : "xếp hàng"
    BOOKS ||--o{ WAITLIST : "có người xếp hàng"
    USERS ||--o{ NOTIFICATIONS : "nhận"
    USERS ||--o| ORIENTATION_ATTENDANCE : "tham gia lớp"

    %% MODULE: INVENTORY
    USERS ||--o{ SHIFT_HANDOVER : "bàn giao"
    USERS ||--o{ INVENTORY_AUDITS : "quản lý"
    INVENTORY_AUDITS ||--|{ INVENTORY_DETAILS : "quét"
    BOOK_COPIES ||--o{ INVENTORY_DETAILS : "được quét"

    %% FULL COLUMNS ENTITY DEFINITIONS (V41 UPDATES)
    USERS {
        string user_id PK
        string role_id FK
        string password_hash
        boolean is_first_login
        string full_name
        string student_id
        string department
        string email
        string phone
        string user_type
        string card_status
        datetime card_expiry_date
        boolean discipline_flag
        int room_violation_count
        datetime room_lock_until
    }
    STAFF_ROLES {
        string role_id PK
        string role_name
        json permissions
    }
    WALLET {
        string wallet_id PK
        string user_id FK
        int deposit_balance
        int total_debt
        int lock_version
    }
    LOAN_TICKETS {
        string ticket_id PK
        string user_id FK
        string ticket_type
        string status
        datetime created_at
    }
    LOAN_DETAILS {
        string detail_id PK
        string ticket_id FK
        string barcode FK
        string checkout_condition_note
        string return_condition_note
        string return_status
        datetime due_date
        int renewal_count
        boolean is_recalled
        int late_fine_accrued
        datetime return_date
    }
    TRANSACTIONS {
        string transaction_id PK
        string user_id FK
        string loan_detail_id FK
        string parent_transaction_id FK
        string trans_type
        string payment_method
        int amount
        string status
        string admin_ref
        string gateway_ref
        string proof_document_url
        datetime expires_at
        datetime created_at
    }
    BOOK_COPIES {
        string barcode PK
        string book_id FK
        string status
        int cover_price
        int appraised_value
        string binding_type
        string condition_note
        string location
        string source
        datetime import_date
        datetime locked_until
        string locked_by_user FK
        int weight_grams
        string replaced_by_barcode
        int lock_version
    }
    BOOKS {
        string book_id PK
        string publisher_id FK
        string category_id FK
        string title
        string isbn
        string ddc_call_number
        int publish_year
        string language
        string label_color
        int default_price
        boolean is_digital
    }
    CATEGORIES {
        string category_id PK
        string name
        string parent_id FK
    }
    PUBLISHERS {
        string publisher_id PK
        string name
        string contact_info
    }
    AUTHORS {
        string author_id PK
        string name
        string biography
    }
    BOOK_AUTHORS {
        string book_id FK
        string author_id FK
    }
    DIGITAL_DOCUMENTS {
        string doc_id PK
        string book_id FK
        string file_url
        boolean is_open_source
        string drm_encryption_key
        int download_count
        int view_count
    }
    DIGITAL_USAGE_LOGS {
        string log_id PK
        string doc_id FK
        string user_id FK
        string ip_address
        datetime accessed_at
    }
    ROOMS {
        string room_id PK
        string room_name
        int capacity
        string facilities
        string status
    }
    ROOM_BOOKINGS {
        string booking_id PK
        string user_id FK
        string room_id FK
        datetime start_time
        datetime end_time
        datetime actual_start_time
        datetime actual_end_time
        string status
    }
    ROOM_BOOKING_MEMBERS {
        string booking_id FK
        string user_id FK
        boolean is_leader
    }
    WAITLIST {
        string waitlist_id PK
        string book_id FK
        string user_id FK
        datetime requested_at
        datetime notified_at
        datetime expires_at
        string status
    }
    NOTIFICATIONS {
        string notif_id PK
        string user_id FK
        string type
        string content
        boolean is_read
        datetime sent_at
    }
    ORIENTATION_ATTENDANCE {
        string record_id PK
        string user_id FK
        datetime attended_date
        boolean is_passed
        boolean processed
    }
    SHIFT_HANDOVER {
        string shift_id PK
        string admin_id FK
        string pos_terminal_id
        datetime start_time
        datetime end_time
        int starting_cash
        int system_revenue
        int actual_cash
        int discrepancy_amount
        string status
    }
    INVENTORY_AUDITS {
        string audit_id PK
        string admin_id FK
        datetime start_time
        datetime end_time
        string status
        int total_expected
        int total_scanned
        int total_missing
    }
    INVENTORY_DETAILS {
        string detail_id PK
        string audit_id FK
        string barcode FK
        string scan_status
        string scanned_location
    }

    
    BOOK_PROPOSALS {
        string proposal_id PK
        string user_id FK
        string book_title
        string author_name
        string reason
        string status
        datetime created_at
    }
    COMPLAINTS {
        string complaint_id PK
        string user_id FK
        string title
        string isbn
        string ddc_call_number
        string content
        string status
        string resolution_note
        datetime created_at
    }
    REVIEWS {
        string review_id PK
        string user_id FK
        string book_id FK
        int rating_stars
        string comment
        datetime created_at
    }
    WISHLIST {
        string wishlist_id PK
        string user_id FK
        string book_id FK
        datetime added_at
    }
    SUPPLIERS {
        string supplier_id PK
        string name
        string contact_person
        string phone
        string address
    }
    GOODS_RECEIPTS {
        string receipt_id PK
        string supplier_id FK
        string admin_id FK
        int total_cost
        datetime import_date
        string status
    }
    RECEIPT_DETAILS {
        string detail_id PK
        string receipt_id FK
        string book_id FK
        int quantity
        int unit_price
    }

    %% INDEPENDENT TABLES
    AUDIT_LOGS {
        string log_id PK
        string admin_id
        string action
        string table_name
        json changes
        datetime created_at
    }
    KIOSKS {
        string kiosk_id PK
        string location_floor
        string ip_address
        string status
        datetime last_ping
    }
    SYSTEM_CONFIGS {
        string config_key PK
        string config_value
        string description
    }
    HOLIDAY_CALENDAR {
        string date_id PK
        string holiday_name
        boolean is_closed
        string override_open_time
        string override_close_time
    }
    UNIVERSITY_SYNC_LOGS {
        string log_id PK
        string endpoint
        json payload
        string sync_status
        datetime executed_at
    }